# aura-magic

./: README.md  pyproject.toml
src/aura/: __init__.py  aura.py  caster.py  spells.py  values.py
src/aura/spell/: ambient_magic_regen.py  elements.py  pause.py  unpause.py  weight.py
src/aura/spell/combo/: combo.py  combust.py  invigorate.py
src/aura/spell/elemental/: absorb.py  air_slice.py  charge.py  earth_shield.py  flash.py  freeze.py  haste.py  heal.py  ignite.py  (+12 more)
tests/: conftest.py  test_air_slice.py  test_ambient_regen.py  test_aura.py  test_earth_shield.py  test_fire_ignite.py  test_values.py
tests/aura/: test_aura.py  test_events.py  test_spell.py  test_spell_level_scaler.py
tests/spell/: test_ambient_regen.py  test_charge.py  test_pause.py  test_unpause.py  test_vulnerable.py  test_weight.py
tests/spell/combo/: test_combo.py  test_combust.py  test_invigorate.py
tests/spell/elemental/: test_absorb.py  test_air_slice.py  test_charge.py  test_earth_shield.py  test_fire_ignite.py  test_flash.py  test_freeze.py  test_haste.py  test_heal.py  test_ice_shield.py  test_pause.py  test_regen.py  test_rock.py  test_shadow.py  test_shock.py  test_slice.py  test_unpause.py  test_vulnerable.py  test_warmth.py  test_weight.py
tests/spells/: test_air_slice.py  test_ambient_regen.py  test_charge.py  test_earth_shield.py  test_fire_ignite.py  test_freeze.py  test_ice_shield.py  test_vulnerable.py
tests/values/: test_counter.py  test_duration.py  test_min_max_value.py  test_value_modifier.py  test_value_modifiers.py  test_value_with_modifiers.py  test_values.py
