[project]
name = "aura"
version = "0.1.0"
description = "Magical Aura manipulation library"
readme = "README.md"
authors = [
    { name = "Aaron Silinskas", email = "aaron@mindwidgets.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
aura = "aura:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
